<resources>
    <string name="app_name">arabam</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error">Bağlantı Kurulamadı Tekrar Deneyin!!</string>
    <string name="image">Image</string>
    <string name="location">%1$s / %2$s</string>
    <string name="date_format">%1$d - %2$d - %3$d</string>
    <string name="image_size">%1$dx%2$d</string>
    <string name="whatsapp_message"> %1$s \n\nModel =  %2$s \n\nFiyat =  %3$s </string>
    <string name="spinner_select">Seçiniz..</string>
    <string name="result_ok">TAMAM</string>

    <!--Advert-->
    <string name="advert_no_title">İlan No</string>
    <string name="advert_date_title">İlan Tarihi</string>
    <string name="advert_model_title">Model</string>
    <string name="advert_year_title">Yıl</string>
    <string name="advert_fuel_title">Yakıt Tipi</string>
    <string name="advert_gear_title">Vites Tipi</string>
    <string name="advert_km_title">Kilometre</string>
    <string name="advert_price_title">Fiyat</string>
    <string name="advert_color_title">Renk</string>

    <string name="advert_property_year_name">year</string>
    <string name="advert_property_fuel_name">fuel</string>
    <string name="advert_property_gear_name">gear</string>
    <string name="advert_property_km_name">km</string>
    <string name="advert_property_color_name">color</string>
    <string name="fragment_advert_detail_title">İlan Detayı</string>
    <string name="fragment_favorite">Favoriler</string>

    <string name="fragment_detail_call">Ara</string>
    <string name="fragment_detail_whatsapp">WhatsApp</string>
    <string name="fragment_home_sort_result_error_info">İfade Ettiğiniz Sıralama Mevcut Değil</string>
    <string name="fragment_home_filter_result_error_info">Seçilen Filtreye Uygun Sonuç Bulunamadı..</string>

    <!--Sort-->
    <string name="speach_to_text_title">Sırala</string>
    <string name="speach_to_text_info">Dilerseniz Mikrofon Simgesine Tıklayıp Belirtilen Komutları Söyleyerek Sıramala Yapabilirsiniz.</string>

    <string name="sort_type_price_desc_name">Fiyat - ucuzdan pahalıya</string>
    <string name="sort_type_price_desc_message">fiyat ucuzdan pahalıya</string>
    <string name="sort_type_price_desc_other_message">Fiyat ucuzdan pahalıya</string>

    <string name="sort_type_price_asc_name">Fiyat - pahalıdan ucuza</string>
    <string name="sort_type_price_asc_message">fiyat pahalıdan ucuza</string>
    <string name="sort_type_price_asc_other_message">Fiyat pahalıdan ucuza</string>

    <string name="sort_type_date_desc_name">İlan tarihi - eskiden yeniye</string>
    <string name="sort_type_date_desc_message">ilan tarihi eskiden yeniye</string>
    <string name="sort_type_date_desc_other_message">İlan tarihi eskiden yeniye</string>

    <string name="sort_type_date_asc_name">İlan tarihi - yeniden eskiye</string>
    <string name="sort_type_date_asc_message">ilan tarihi yeniden eskiye</string>
    <string name="sort_type_date_asc_other_message">İlan tarihi yeniden eskiye</string>

    <string name="sort_type_year_desc_name">Model yılı - eskiden yeniye</string>
    <string name="sort_type_year_desc_message">model yılı eskiden yeniye</string>
    <string name="sort_type_year_desc_other_message">Model yılı eskiden yeniye</string>

    <string name="sort_type_year_asc_name">Model yılı - yeniden eskiye</string>
    <string name="sort_type_year_asc_message">model yılı yeniden eskiye</string>
    <string name="sort_type_year_asc_other_message">Model yılı yeniden eskiye</string>
    <string name="layout_filter_title">Filtrele</string>
    <string name="layout_filter_category">Kategori</string>

    <string name="layout_filter_date_title">İlan Tarihi</string>
    <string name="layout_filter_max_date">Maksimum</string>
    <string name="layout_filter_min_date">Minimum</string>

    <string name="layout_filter_year_title">Model Yılı</string>
    <string name="layout_filter_min_year">Minimum</string>
    <string name="layout_filter_max_year">Maksimum</string>

    <!--Category-->
    <string name="category">otomobil"/"renault"-"clio"-"1"-"5"-"bluedci"-"touch</string>
    <string name="category1">otomobil"/"hyundai"-"elantra"-"1"-"6"-"mpi"-"elite</string>
    <string name="category2">otomobil"/"honda"-"civic"-"1"-"6"-"es</string>
    <string name="category3">otomobil"/"volkswagen"-"golf"-"1"-"6"-"primeline</string>
    <string name="category4">otomobil"/"honda"-"accord"-"2"-"4"-"executive</string>
    <string name="content_description_sort">Sırala</string>
    <string name="content_description_filter">Filtrele</string>
    <string name="content_description_main">Ayrıntı</string>
    <string name="fragment_favorite_empty_list">Seçili Favori İlanınız Bulunamadı..</string>
</resources>