<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewState"
            type="com.recepyesilkaya.arabam.ui.home.viewstate.FilterViewState" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/red_500"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivFilterClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="@{viewState.alertClose}"
                android:src="@drawable/ic_close"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvFilterTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:drawablePadding="16dp"
                android:text="@string/layout_filter_title"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_filter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvFilterCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/layout_filter_category"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvFilterTitle" />

            <Spinner
                android:id="@+id/spinnerCategory"
                onItemClickListener="@{viewState.onItemClickListenerCategory}"
                spinnerAdapterCategory="@{viewState.categoryAdapter}"
                android:layout_width="150dp"
                android:layout_height="42dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvFilterTitle" />

            <View
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_margin="8dp"
                android:background="@drawable/bg_rounded_red_border"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spinnerCategory" />

            <TextView
                android:id="@+id/tvDateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/layout_filter_date_title"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerCategory" />

            <TextView
                android:id="@+id/tvMinDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:text="@string/layout_filter_min_year"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btnMinDate" />

            <Button
                android:id="@+id/btnMinDate"
                datePickerDialogMinDate="@{viewState.homeViewModel}"
                android:layout_width="150dp"
                android:layout_height="42dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDateTitle" />

            <TextView
                android:id="@+id/tvMaxDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:text="@string/layout_filter_max_date"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btnMaxDate" />

            <Button
                android:id="@+id/btnMaxDate"
                datePickerDialogMaxDate="@{viewState.homeViewModel}"
                android:layout_width="150dp"
                android:layout_height="42dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnMinDate" />

            <View
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_margin="8dp"
                android:background="@drawable/bg_rounded_red_border"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnMaxDate" />

            <TextView
                android:id="@+id/tvYearTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/layout_filter_year_title"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnMaxDate" />

            <TextView
                android:id="@+id/tvMinYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:text="@string/layout_filter_min_year"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/spinnerMinYear" />

            <Spinner
                android:id="@+id/spinnerMinYear"
                onItemClickListener="@{viewState.onItemClickListenerMinYear}"
                spinnerAdapterMinYear="@{viewState.yearAdapter}"
                android:layout_width="150dp"
                android:layout_height="42dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvYearTitle" />

            <TextView
                android:id="@+id/tvMaxYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:text="@string/layout_filter_max_year"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/spinnerMaxYear" />

            <Spinner
                android:id="@+id/spinnerMaxYear"
                onItemClickListener="@{viewState.onItemClickListenerMaxYear}"
                spinnerAdapterMaxYear="@{viewState.yearAdapter}"
                android:layout_width="150dp"
                android:layout_height="42dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerMinYear" />

            <Button
                android:id="@+id/btnOk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:onClick="@{viewState.onClickBtnOk}"
                android:text="@string/result_ok"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerMaxYear" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
</layout>


