<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="com.recepyesilkaya.arabam.util.State" />

        <variable
            name="viewModel"
            type="com.recepyesilkaya.arabam.ui.detail.DetailViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="32dp"
                        android:background="@drawable/ic_back"
                        android:onClick="@{()->viewModel.onBackClick.invoke()}" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_advert_detail_title"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_20sp"
                        android:textStyle="bold" />
                </LinearLayout>


            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".ui.detail.DetailFragment">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{viewModel.carDetailResource.state==State.LOADING ? View.VISIBLE : View.GONE, default=visible}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error"
                android:visibility="@{viewModel.carDetailResource.state==State.ERROR ? View.VISIBLE : View.GONE, default=gone}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/containerDetail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="60dp"
                android:orientation="vertical"
                android:visibility="@{viewModel.carDetailResource.state==State.SUCCESS ? View.VISIBLE : View.GONE, default=visible}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/grey_f0"
                    android:gravity="center"
                    android:padding="6dp"
                    android:text="@{viewModel.carDetailResource.data.title}"
                    android:textColor="@color/text_light_black"
                    android:textSize="@dimen/text_size_12sp" />

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <org.imaginativeworld.whynotimagecarousel.ImageCarousel
                            android:id="@+id/carousel"
                            android:layout_width="match_parent"
                            android:layout_height="300dp"
                            app:imageScaleType="fitCenter"
                            app:itemLayout="@layout/item_carousel"
                            tools:ignore="MissingClass" />

                        <TextView
                            android:id="@+id/tvCategory"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="6dp"
                            android:text="@{viewModel.carDetailResource.data.category.name}"
                            android:textColor="@color/blue_action"
                            android:textSize="@dimen/text_size_14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@{@string/location(viewModel.carDetailResource.data.location.cityName,viewModel.carDetailResource.data.location.townName)}"
                            android:textColor="@color/gray_darker"
                            android:textSize="@dimen/text_size_12sp"
                            android:textStyle="bold" />

                        <com.google.android.material.tabs.TabLayout
                            android:id="@+id/tlProperty"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            app:tabSelectedTextColor="@color/red"
                            app:tabTextColor="@color/text_light_black" />

                        <View
                            android:id="@+id/divider1"
                            android:layout_width="match_parent"
                            android:layout_height="0.11dp"
                            android:layout_marginTop="4dp"
                            android:background="@color/grey_light" />

                        <androidx.viewpager.widget.ViewPager
                            android:id="@+id/vpProperty"
                            android:layout_width="match_parent"
                            android:layout_height="300dp" />


                    </LinearLayout>

                </androidx.core.widget.NestedScrollView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/containerCTA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="@{viewModel.carDetailResource.state==State.SUCCESS ? View.VISIBLE : View.GONE, default=visible}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@color/blue_action"
                    android:elevation="8dp"
                    app:cardCornerRadius="8dp">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnCall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/blue_action"
                        android:drawableBottom="@drawable/ic_call"
                        android:gravity="center"
                        android:text="@string/fragment_detail_call"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_16sp"
                        android:textStyle="bold"
                        tools:ignore="RtlCompat" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@color/blue_action"
                    android:elevation="8dp"
                    app:cardCornerRadius="8dp">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnWhatsApp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/green"
                        android:drawableBottom="@drawable/ic_message"
                        android:onClick="@{viewModel.onClickWhatsApp}"
                        android:text="@string/fragment_detail_whatsapp"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_16sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>